--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,4 +13,9 @@
       state: started
       enabled: yes
 
-  
+  - name: connect to mysql server
+    community.mysql.mysql_info:
+      login_user: root
+      login_password: ExpenseApp@1
+      login_host: mysql.pavanreddy.store
+    register: mysql_info
