--- a/mysql.yaml
+++ b/mysql.yaml
@@ -19,3 +19,7 @@
       login_password: ExpenseApp@1
       login_host: mysql.pavanreddy.store
     register: mysql_info
+
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "MYSQL info: {{ mysql_info }}"
