--- a/mysql.yaml
+++ b/mysql.yaml
@@ -19,6 +19,7 @@
       login_password: ExpenseApp@1
       login_host: mysql.pavanreddy.store
     register: mysql_info
+    ignore_errors: true
 
   - name: print the output
     ansible.builtin.debug:
