--- a/mysql.yaml
+++ b/mysql.yaml
@@ -2,6 +2,14 @@
   hosts: mysql
   become: yes
   tasks:
+  - name: Install MySQL libraries
+    ansible.builtin.pip:
+    name: " {{ item }}"
+    executable: pip3.9
+    loop:
+    - Crypotography
+    - PyMySQL
+
   - name: install mysql server
     ansible.builtin.package:
       name: mysql-server
