--- a/mysql.yaml
+++ b/mysql.yaml
@@ -32,6 +32,6 @@
     ansible.builtin.debug:
       msg: "MYSQL info: {{ mysql_info }}"
 
-  # - name: setup root password
-  #   ansible.builtin.command: "mysql_secure_installization --set-root-pass ExpenseApp@1"
-  #   when: mysql_info.failed is true
+  - name: setup root password
+    ansible.builtin.command: " mysql_secure_installization --set-root-pass ExpenseApp@1 "
+    when: mysql_info.failed is true
