--- a/mysql.yaml
+++ b/mysql.yaml
@@ -33,5 +33,5 @@
       msg: "MYSQL info: {{ mysql_info }}"
 
   - name: setup root password
-    ansible.builtin.command: " mysql_secure_installization --set-root-pass ExpenseApp@1 "
+    ansible.builtin.command: " --set-root-pass ExpenseApp@1 "
     when: mysql_info.failed is true
