--- a/mysql.yaml
+++ b/mysql.yaml
@@ -20,7 +20,7 @@
       state: started
       enabled: yes
 
-  - name: connect to mysql server
+  - name: connect to the mysql server
     community.mysql.mysql_info:
       login_user: root
       login_password: ExpenseApp@1
