--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,12 @@
 [mysql]
-172.31.93.102 ansible_user=ec2-user ansible_password=DevOps321
+mysql.pavanreddy.store
+
+[backend]
+backend.pavanreddy.store
+
+[frontend]
+frontend.pavanreddy.store
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
