--- a/backend.yaml
+++ b/backend.yaml
@@ -8,7 +8,7 @@
   - name: Enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
-  - name: install Nodejs
+  - name: install nodejs
     ansible.builtin.package:
     name: nodejs
     state: present
