--- a/backend.yaml
+++ b/backend.yaml
@@ -10,8 +10,11 @@
 
   - name: install nodejs
     ansible.builtin.package:
-      name: nodejs
+      name: "{{ item }}"
       state: present
+    loop:
+    - nodejs
+    - mysql
 
   - name: Create expense user
     ansible.builtin.user:
@@ -37,3 +40,14 @@
     community.general.npm:
       path: /app
 
+  - name: copy backend service
+    ansible.builtin.copy:
+      src: backend.service
+      dest: /etc/systemd/system/backend.service
+
+  - name: import mysql
+    community.mysql.mysql_db:
+      login_user: root
+      login_password: ExpenseApp@1
+      login_host: mysql.pavanreddy.store
+      target: /app/schema/backend.sql
