--- a/backend.yaml
+++ b/backend.yaml
@@ -47,6 +47,8 @@
 
   - name: import mysql
     community.mysql.mysql_db:
+      state: import
+      name: all
       login_user: root
       login_password: ExpenseApp@1
       login_host: mysql.pavanreddy.store
