--- a/backend.yaml
+++ b/backend.yaml
@@ -53,3 +53,4 @@
       login_password: ExpenseApp@1
       login_host: mysql.pavanreddy.store
       target: /app/schema/backend.sql
+      remote_src: yes
