--- a/backend.yaml
+++ b/backend.yaml
@@ -46,7 +46,7 @@
       dest: /etc/systemd/system/backend.service
 
   - name: install python libs
-    ansible.builtin.pip
+    ansible.builtin.pip:
       name: PyMySQL
       executable: pip3.9
 
