--- a/backend.yaml
+++ b/backend.yaml
@@ -62,4 +62,12 @@
       login_password: ExpenseApp@1
       login_host: mysql.pavanreddy.store
       target: /app/schema/backend.sql
+
+  - name: deamon reload and restart service
+    ansible.builtin.systemd_service:
+      enabled: true
+      state: restarted
+      deamon_reload: true
+      name: backend
+
       
