--- a/backend.yaml
+++ b/backend.yaml
@@ -63,11 +63,11 @@
       login_host: mysql.pavanreddy.store
       target: /app/schema/backend.sql
 
-  - name: deamon reload and restart service
+  - name: daemon reload and restart service
     ansible.builtin.systemd_service:
       enabled: true
       state: restarted
-      deamon_reload: true
+      daemon_reload: true
       name: backend
 
       
