--- a/frontend.yaml
+++ b/frontend.yaml
@@ -10,7 +10,7 @@
   - name: start and enable nginx
     ansible.builtin.service:
       name: nginx
-      state: started
+      state: present
       enablend: yes
 
   
