--- a/frontend.yaml
+++ b/frontend.yaml
@@ -5,7 +5,7 @@
   - name: install nginx
     ansible.builtin.dnf:
       name: nginx
-      state: enabled
+      state: installed
 
   - name: start and enable nginx
     ansible.builtin.service:
